# kql-tester

./: .gitignore  README.md  kql-tester.py  pyproject.toml  requirements.txt
.github/workflows/: format-test-results.py  kql-qa-testing.yml
kql_tester/: __init__.py  main.py
